--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
         <br />
         टीप: खालील लिंक्सवर टॅप करा<br />
         कुटुंबाचे आधारस्तंभ<br />
-        <a href="Father.html" target="_blank">Father</a>
+        <a href="father.html" target="_blank">Father</a>
+        <a href="mother.html" target="_blank>Mother</a>
+         <a href="joshi.html" target="_blank">Elder</a>
+        <a href="bidgar.html" target="_blank">Father</a>
+          
       </p>
     </div>
   </body>
 </html>
+
