--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
         <br />
         टीप: खालील लिंक्सवर टॅप करा<br />
         कुटुंबाचे आधारस्तंभ<br />
-        <a href="father.html" target="_blank">Father</a>
-       <a href="mother.html" target="_blank">mother</a>
-       <a href="joshi.html" target="_blank">Elder</a>
-        <a href="bidgar.html" target="_blank">Father</a>
+        <a href="father.html" target="_blank">Father</a><br><br>
+       <a href="mother.html" target="_blank">mother</a><br><br>
+       <a href="joshi.html" target="_blank">Trupti & Prathmesh</a><br><br>
+        <a href="bidgar.html" target="_blank">Dipti & Prathmesh</a>
           
       </p>
     </div>
   </body>
 </html>
+
 
 
