--- a/father.html
+++ b/father.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="fatimage.jpg" width="500" align="right" />
+    <img src="./Family/fatimage.jpg" width="500" align="right" />
 
     <h1>GURU THE FATHER</h1>
     <div>
@@ -27,3 +27,4 @@
     </div>
   </body>
 </html>
+
