--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="C:\HTML\Family\DSC_0290.JPG" width="1000" align="right" />
+    <img src="https://github.com/sarthajoshi122-droid/family/blob/main/image.JPG?raw=true" width="1000" align="right" />
     <h1>The Family</h1>
     <div>
       <p>
@@ -27,6 +27,7 @@
     </div>
   </body>
 </html>
+
 
 
 
