--- a/joshi.html
+++ b/joshi.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="sisimage.JPG" width="400" align="right" />
+    <img src="https://github.com/sarthajoshi122-droid/family/blob/main/sisimage.JPG?raw=true" width="400" align="right" />
     <h1>Trupti & Prathamesh</h1>
     <div>
       <p>
@@ -27,3 +27,4 @@
     </div>
   </body>
 </html>
+
