--- a/mother.html
+++ b/mother.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="motimage.jpg" width="400" align="right" />
+    <img src="https://github.com/sarthajoshi122-droid/family/blob/main/motimage.JPG?raw=true" width="400" align="right" />
     <h1>Soul of our Family</h1>
     <div>
       <p>
@@ -27,3 +27,4 @@
     </div>
   </body>
 </html>
+
