--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="https://github.com/sarthajoshi122-droid/family/blob/main/image.JPG?raw=true" width="1000" align="right" />
+    <img src="https://github.com/sarthajoshi122-droid/family/blob/main/image.JPG?raw=true" width="500" align="right" />
     <h1>The Family</h1>
     <div>
       <p>
         कुटुंब हे आपल्या जीवनाचे हृदय आहे—अनिश्चित प्रेम, आधार आणि आपलेपणाचा
-        स्रोत. इथेच आपण आपले पहिले धडे शिकतो, आपले खोलवरचे आनंद सामायिक करतो आणि
-        गरजेच्या वेळी सांत्वन मिळवतो. रक्ताच्या नात्याने बांधलेले असो किंवा
+        स्रोत.<br> इथेच आपण आपले पहिले धडे शिकतो, आपले खोलवरचे आनंद सामायिक करतो आणि
+        गरजेच्या वेळी सांत्वन मिळवतो.<br> रक्ताच्या नात्याने बांधलेले असो किंवा
         संबंधातून निवडलेले असो, कुटुंब आपण कोण आहोत हे घडवते आणि आपल्याला आठवण
         करून देते की आपण कधीही खरोखर एकटे नसतो.
         <br />
@@ -27,6 +27,7 @@
     </div>
   </body>
 </html>
+
 
 
 
