--- a/index.html
+++ b/index.html
@@ -4,44 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      p{
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      p {
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+          rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
       }
     </style>
     <title>Document</title>
   </head>
   <body>
-    <img src="https://github.com/sarthajoshi122-droid/family/blob/main/image.JPG?raw=true" width="400" align="right" />
+    <img
+      src="https://github.com/sarthajoshi122-droid/family/blob/main/image.JPG?raw=true"
+      width="400"
+      align="right"
+    />
     <h1>The Family</h1>
     <div>
       <p>
         कुटुंब हे आपल्या जीवनाचे हृदय आहे—अनिश्चित प्रेम, आधार आणि आपलेपणाचा
-        स्रोत.<br> इथेच आपण आपले पहिले धडे शिकतो, आपले खोलवरचे आनंद सामायिक करतो आणि
-        गरजेच्या वेळी सांत्वन मिळवतो.<br> रक्ताच्या नात्याने बांधलेले असो किंवा
-        संबंधातून निवडलेले असो, कुटुंब आपण कोण आहोत हे घडवते आणि आपल्याला आठवण
-        करून देते की आपण कधीही खरोखर एकटे नसतो.
+        स्रोत.<br />
+        इथेच आपण आपले पहिले धडे शिकतो, आपले खोलवरचे आनंद सामायिक करतो आणि
+        गरजेच्या वेळी सांत्वन मिळवतो.<br />
+        रक्ताच्या नात्याने बांधलेले असो किंवा संबंधातून निवडलेले असो, कुटुंब आपण
+        कोण आहोत हे घडवते आणि आपल्याला आठवण करून देते की आपण कधीही खरोखर एकटे
+        नसतो.
         <br />
         टीप: खालील लिंक्सवर टॅप करा<br />
         कुटुंबाचे आधारस्तंभ<br />
-        <a href="father.html" target="_blank">Father</a><br><br>
-       <a href="mother.html" target="_blank">mother</a><br><br>
-       <a href="joshi.html" target="_blank">Trupti & Prathmesh</a><br><br>
+        <a href="father.html" target="_blank">Father</a><br /><br />
+        <a href="mother.html" target="_blank">mother</a><br /><br />
+        <a href="joshi.html" target="_blank">Trupti & Prathmesh</a><br /><br />
         <a href="bidgar.html" target="_blank">Dipti & Prathmesh</a>
-          
       </p>
     </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
