--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       p {
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-          rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
       }
     </style>
     <title>Document</title>
@@ -30,6 +29,7 @@
         <br />
         टीप: खालील लिंक्सवर टॅप करा<br />
         कुटुंबाचे आधारस्तंभ<br />
+        <br />
         <a href="father.html" target="_blank">Father</a><br /><br />
         <a href="mother.html" target="_blank">mother</a><br /><br />
         <a href="joshi.html" target="_blank">Trupti & Prathmesh</a><br /><br />
@@ -38,4 +38,5 @@
     </div>
   </body>
 </html>
+
 
