--- a/father.html
+++ b/father.html
@@ -11,7 +11,7 @@
     <h1>गुरु</h1>
     <div>
       <p>
-        आमच्या कुटुंबात गुरु खूप छान माणूस आहे. तो दिवसा सर्वांना फोन करून
+        आमच्या कुटुंबात गुरु खूप छान माणूस आहे. ते दिवसा सर्वांना फोन करून
         त्यांच्या आयुष्यात काय करत आहे याबद्दल विचारायचा आणि त्यांना सहानुभूतीही
         द्यायचा.<br />
         <br />
@@ -27,6 +27,7 @@
     </div>
   </body>
 </html>
+
 
 
 
