--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       width="400"
       align="right"
     />
-    <h1>जोशी कुटुंब</h1>
+    <h1>The Family</h1>
     <div>
       <p>
         कुटुंब हे आपल्या जीवनाचे हृदय आहे—अनिश्चित प्रेम, आधार आणि आपलेपणाचा
@@ -27,17 +27,20 @@
         कोण आहोत हे घडवते आणि आपल्याला आठवण करून देते की आपण कधीही खरोखर एकटे
         नसतो.
         <br />
+        <br />
         टीप: खालील लिंक्सवर टॅप करा<br />
+        <br />
         कुटुंबाचे आधारस्तंभ<br />
         <br />
-        <a href="father.html" target="_blank">गुरु</a><br /><br />
-        <a href="mother.html" target="_blank">आई</a><br /><br />
-        <a href="joshi.html" target="_blank">तृप्ती आणि प्रथमेश</a><br /><br />
-        <a href="bidgar.html" target="_blank">दिप्ती आणि प्रथमेश</a>
+        <a href="father.html" target="_blank">Father</a><br /><br />
+        <a href="mother.html" target="_blank">mother</a><br /><br />
+        <a href="joshi.html" target="_blank">Trupti & Prathmesh</a><br /><br />
+        <a href="bidgar.html" target="_blank">Dipti & Prathmesh</a>
       </p>
     </div>
   </body>
 </html>
+
 
 
 
